[tool.poetry]
name = "llm-study"
version = "0.1.0"
description = ""
authors = ["Michael <vuanhduc2685@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
streamlit = "^1.27.0"
langchain = "^0.0.300"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
