[tool.poetry]
name = "llm-study"
version = "0.1.0"
description = ""
authors = ["Michael <vuanhduc2685@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
streamlit = "^1.27.0"
langchain = "^0.0.300"
pypdf = "^3.16.1"
tiktoken = "^0.5.1"
sentence-transformers = "^2.2.2"
hnswlib = "^0.7.0"
openai = "^0.27.8"
duckduckgo-search = "^3.8.3"
torch = ">=2.0.0, !=2.0.1"
tabulate = "^0.9.0"
streamlit-feedback = "^0.0.9"
langchain-experimental = "^0.0.10"
docarray = "^0.38.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
